--- a/Web MarkUp Eindopdracht/index.html
+++ b/Web MarkUp Eindopdracht/index.html
@@ -33,10 +33,123 @@
 					 Purmerend 
 				</h2>
 				<p>
-					....
+					150 woorden
 				</p>
 			</article>
+			<aside>
+				pictures
+			</aside>
+			<footer>
+				....
+			</footer>
 		</section>
+		<header id="secondarycontent">
+			Wijk
+		</header>
+		<section id="secondary">
+			<article>
+				<h2> 
+					 Wheermolen
+				</h2>
+				<p>
+					350 woorden
+				</p>
+			</article>
+			<aside>
+				pictures
+			</aside>
+			<footer>
+				....
+			</footer>
+		</section>
+		<header id="sportcontent">
+			Jiu Jitsu
+		</header>
+		<section id="sport">
+			<article>
+				<h2> 
+					 Sporten
+				</h2>
+				<ul id="sports">
+					<li>
+						sport 1
+					</li>
+					<li>
+						sport 2
+					</li>
+					<li>
+						sport 3
+					</li>
+					<li>
+						sport 4
+					</li>
+					<li>
+						sport 5
+					</li>
+					<li>
+						sport 6
+					</li>
+					<li>
+						sport 7
+					</li>
+					<li>
+						sport 8
+					</li>
+					<li>
+						sport 9
+					</li>
+					<li>
+						sport 10
+					</li>
+				</ul>
+				<ul id="desc">
+					<li>
+						sport 1: beschrijving
+					</li>
+					<li>
+						sport 2: beschrijving
+					</li>
+					<li>
+						sport 3: beschrijving
+					</li>
+					<li>
+						sport 4: beschrijving
+					</li>
+					<li>
+						sport 5: beschrijving
+					</li>
+					<li>
+						sport 6: beschrijving
+					</li>
+					<li>
+						sport 7: beschrijving
+					</li>
+					<li>
+						sport 8: beschrijving
+					</li>
+					<li>
+						sport 9: beschrijving
+					</li>
+					<li>
+						sport 10: beschrijving
+					</li>
+				</ul>
+			</article>
+			<footer>
+				....
+			</footer>
+		</section>
+		<header id="#referalcontent">
+			Taekwon
+		</header>
+		<section>
 		
+		</section>
+		<aside>
 		
+		</aside>
+		<footer>
+			
+		</footer>
 	</body>	
+	</html>
