--- a/Web MarkUp Eindopdracht/index.html
+++ b/Web MarkUp Eindopdracht/index.html
@@ -24,10 +24,10 @@
 				</ul>
 			</nav>
 		</header>
-		<header id="maincontent">
+		<section id="maincontent">
+		<header>
 			Purmerend
 		</header>
-		<section id="main">
 			<article>
 				<h2> 
 					 Purmerend 
@@ -43,10 +43,10 @@
 				....
 			</footer>
 		</section>
-		<header id="secondarycontent">
+		<section id="secondarycontent">
+		<header>
 			Wijk
 		</header>
-		<section id="secondary">
 			<article>
 				<h2> 
 					 Wheermolen
@@ -62,44 +62,44 @@
 				....
 			</footer>
 		</section>
-		<header id="sportcontent">
+		<section id="sportcontent">
+		<header>
 			Jiu Jitsu
 		</header>
-		<section id="sport">
 			<article>
 				<h2> 
 					 Sporten
 				</h2>
 				<ul id="sports">
 					<li>
-						sport 1
+						Purmersteijn
 					</li>
 					<li>
-						sport 2
+						Early bird
 					</li>
 					<li>
-						sport 3
+						M.H.C.
 					</li>
 					<li>
-						sport 4
+						ViP
 					</li>
 					<li>
-						sport 5
+						AV NEA
 					</li>
 					<li>
-						sport 6
+						Flying Petrels
 					</li>
 					<li>
-						sport 7
+						HWA-Rang Dragon
 					</li>
 					<li>
-						sport 8
+						Rugby Waterland
 					</li>
 					<li>
-						sport 9
+						Elckerlyc
 					</li>
 					<li>
-						sport 10
+						Kodokan
 					</li>
 				</ul>
 				<ul id="desc">
@@ -135,6 +135,18 @@
 					</li>
 				</ul>
 			</article>
+			<aside>
+				<a href="https://purmersteijn.eu/"> <img src="img/soccer.jpg" alt="voetbal"> </a>
+				<a href="https://www.earlybird.nl/"> <img src="img/basketbal.jpg" alt="basketbal"> </a>
+				<a href="https://www.mhcp.nl/site/Default.asp"><img src="img/hockey.jpg" alt="hockey"> </a>
+				<a href="https://www.vippurmerend.nl/"><img src="img/volleybal.jpg" alt="volleybal"> </a>
+				<a href="https://avnea.nl/"><img src="img/atletiek.jpg" alt="atletiek"> </a>
+				<a href="https://www.flyingpetrels.nl/"><img src="img/honkbal.jpg" alt="honkbal"> </a>
+				<a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"><img src="img/taekwondo.jpg" alt="taekwondo"> </a>
+				<a href="https://www.rugbyclubwaterland.nl/"><img src="img/rugby.jpg" alt="rugby"> </a>
+				<a href="https://www.elckerlyc.nl/"><img src="img/tennis.jpg" alt="tennis"> </a>
+				<a href="https://svkodokan.nl/"><img src="img/judo.jpg" alt="judo"> </a>
+			</aside>
 			<footer>
 				....
 			</footer>
@@ -142,14 +154,54 @@
 		<header id="#referalcontent">
 			Taekwon
 		</header>
-		<section>
-		
-		</section>
 		<aside>
-		
+			<p> 
+				video 
+			</p>
 		</aside>
 		<footer>
-			
+			....
 		</footer>
+		<section id="contactcontent">
+		<header>
+			Contact
+		</header>
+		<form 
+		action = "http://witan.nl/inholland/testform.php"
+		method = "post"
+		autocomplete="on">
+		
+		<fieldset>
+		<legend>		
+			Contact about
+		</legend>
+			<p>
+				First and last name *:
+			</p>
+		<input 
+			name = "fname" 
+			type = "text"
+			placeholder="Full name"/>
+			<p>
+				E-mail address *:
+			</p>
+		<input 
+			name ="e-mail"
+			type="email"
+			placeholder="E-mail address"
+			autocomplete="off"/>
+			
+			<p> 
+				Note*:
+			</p>
+			<textarea 
+				id="note" name="comment" form="usrform">
+			</textarea>
+		
+		<input  type="submit"> &gt; Send email
+		</input>
+		</form>
+		</fieldset>
+		</section>
 	</body>	
 	</html>
