--- a/Web MarkUp Eindopdracht/index.html
+++ b/Web MarkUp Eindopdracht/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="keywords" content="InHolland, Eindopdracht, Toetsweek 1, Web MarkUp, html5">
-		<meta name="description" content="Html5, Eindopdracht Web MarkUp">
+		<meta name="keywords" content="Html5, CSS, Purmerend, Wheermolen, Sport, Taekwondo, Jiu Jitsu">
+		<meta name="description" content="Dit is een website over Purmerend, de wijk Wheermolen en welke sporten er in de omgeving hiervan te vinden zijn.">
 		<meta name="author" content="Nick Emons" >
 		
-		<title> Taekwon Purmerend </title>
-		<link href="style.css" rel="stylesheet" type="text/css" />
+		<title> Taekwondo Purmerend </title>
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<header class="container">
 			<h1 id="branding"> 
-				Taekwon Purmerend 
+				Taekwondo Purmerend 
 			</h1>
 			<nav>
 				<ul>
@@ -24,44 +24,80 @@
 				</ul>
 			</nav>
 		</header>
+		<!-- Over de stad -->
 		<section id="maincontent">
 		<header>
 			Purmerend
 		</header>
 			<article>
 				<h2> 
-					 Purmerend 
+					 Algemene informatie
 				</h2>
 				<p>
-					150 woorden
+					Purmerend is een plaats in de provincie Noord-Holland. Er wonen circa 80.000 mensen. 
+					Een groot deel hiervan zijn forenzen. Zij reizen dagelijks naar Amsterdam. 
+					Purmerend ligt namelijk 20km ten noorden van Amsterdam en heeft hierdoor een erg goede verbinding naar Amsterdam, zowel met de auto als het openbaar vervoer.
+					Daarnaast staat Purmerend bekend om zijn waterrijke omgeving. Het ligt in de regio Waterland.
 				</p>
+				<p>
+					Een andere naam voor Purmerend is ook wel Marktstad. 
+					Dit komt door een bekend plein in het centrum van Purmerend, genaamd de Koemarkt. 
+					Vroeger werden hier veemarkten gehouden, vandaar de naam. Tegenwoordig komt hier de markt zoals wij hem nu kennen.
+					In het weekend is de Koemarkt een bruizende uitgaansgelegenheid. Jong en oud komen hier samen. 
+				</p>
+				<p>
+					Twee keer per jaar is er kermis in Purmerend. Dit wordt gepromoot in Purmerend en omstreken. Hierdoor trekt de kermis vele bezoekers. 
+					Er zijn verschillende dingen te doen, zoals attracties bezoeken of genieten van de sfeer.
+				</p>
+
 			</article>
-			<aside>
-				pictures
+			<aside id="Purmerend">
+				<img src="img/Purmerend.png" alt="Purmerendse vlag" title="Purmerend">
+				<img src="img/PurmerendseTag.png" alt="Purmerense tag" title="Purmerend">
 			</aside>
 			<footer>
-				....
+				<a href="#contactcontent"> Contact </a>
 			</footer>
 		</section>
+		<!-- Over de wijk -->
 		<section id="secondarycontent">
 		<header>
-			Wijk
+			Wijk in Purmerend
 		</header>
 			<article>
 				<h2> 
 					 Wheermolen
 				</h2>
 				<p>
-					350 woorden
-				</p>
+					Wheermolen is een van de zeven wijken in Purmerend. De andere zes wijken zijn Centrum, Overwhere, Gors, Purmer Noord, Purmer Zuid en Weidevenne. 
+					De wijk Wheermolen is onder te verdelen in drie buurten: Wheermolen West, Wheermolen Oost en Dwarsgebouw. 
+					De wijk Wheermolen wordt omgeven door twee kanalen. Een hiervan ligt ten zuiden en is genaamd de Where. 
+					Het andere kanaal ligt ten oosten en is genaamd de Purmerringvaart. De twee kanalen sluiten op elkaar aan in het zuidoosten van de wijk Wheermolen.
+					Aan de Purmerringvaart ligt ook een Roeivereniging, met de naam De Where. De kanalen zijn prima geschikt om in te roeien. 
+				<p>
+					Deze wijk heeft verschillende dingen, waardoor deze zich onderscheidt van de andere zes wijken. 
+					Ten eerste is er een overdekt winkelcentrum met de naam Makado. Hier bevindt zich een supermarkt, drogisterij, opticien, kledingzaak, dierenwinkel, kapsalon, woonwinkel en verschillende eetgelegenheden. 
+					Ten tweede is er een basisschool. Dit is een openbare basisschool en heet Wheermolen. 
+					Als derde bevindt zich er een kinderdagverblijf. Deze heet De Blauwe Ballon en hier kunnen kinderen van 0 tot en met 4 jaar terecht. 
+					Ten vierde zijn er verschillende plekken voor kinderen om te spelen. Een hiervan is een speeltuin met de naam Wheermolen. Deze speeltuin bevindt zich buiten en heeft een schommel, glijbaan, wip en een klimrek. 
+					De ander heet het Kinderparadijs. Dit is een groot buitenterrein waar kinderen verschillende activiteiten kunnen ondernemen. Er is bijvoorbeeld de mogelijkheid om vuur te maken. Waarop vervolgens de kinderen aardappels, pannenkoeken of mais kunnen bereiden. 
+					Ook is er de mogelijkheid om op eigen gelegenheid hutten en vlotten te bouwen. 
+					Het Kinderparadijs is in de schoolvakanties van de voorjaarsvakantie tot en met de herfstvakantie elke dag open, behalve in de weekenden van de zomervakantie.
+					Er wordt toezicht gehouden door vrijwillers en hierdoor is de toegang gratis.
+					Ten vijfde is er een ijs en inline-skateclub. Dit is een buitenbaan waarop geschaatst of geskatet kan worden. 
+					Ten zesde bevindt Volkstuinvereniging Isis zich hier. Hier hebben mensen de mogelijkheid hun eigen moestuin te verbouwen. 
+					Ten zevende en als laatste grenst deze wijk aan het treinstation Purmerend Overwhere. Vanaf hier kan je richting Hoorn Kersenboogerd of Hoofddorp gaan.
+				</p>	
 			</article>
-			<aside>
-				pictures
+			<aside id="wheermolen">
+				<img src="img/speeltuin.png" alt="Kinder speeltuin" title="Kinder speeltuin">
+				<img src="img/trein.png" alt="Intercity" title="Trein">
 			</aside>
 			<footer>
-				....
+				<a href="#contactcontent"> Contact </a>
 			</footer>
 		</section>
+		<!-- Over de sporten -->
 		<section id="sportcontent">
 		<header>
 			Jiu Jitsu
@@ -102,66 +138,72 @@
 						Kodokan
 					</li>
 				</ul>
-				<ul id="desc">
+				<ol id="desc">
 					<li>
-						sport 1: beschrijving
+						Purmersteijn is een voetbalclub. Het eerste team speelt momenteel in de Hoofdklasse. 
 					</li>
 					<li>
-						sport 2: beschrijving
+						Early bird is een sportclub. Hier kan men basketbal beoefenen.
 					</li>
 					<li>
-						sport 3: beschrijving
+						M.H.C. staat voor Mixed Hockeyclub. Hier spelen zowel jongens als meiden samen in één team.
 					</li>
 					<li>
-						sport 4: beschrijving
+						ViP staat voor Volleybal in Purmerend. Het eerste team speelt momenteel in de 1e klasse B.
 					</li>
 					<li>
-						sport 5: beschrijving
+						AV NEA staat voor Atletiek Vereniging NEA. Hier wordt zowel aan baanatletiek als aan loopsport gedaan.
 					</li>
 					<li>
-						sport 6: beschrijving
+						Flying Petrels is een sportclub. Hier kan men honk- en softbal beoefenen.
 					</li>
 					<li>
-						sport 7: beschrijving
+						HWA-Rang Dragon is een sportclub. Hier kan men Taekwondo beoefenen vanaf 14 jaar.
 					</li>
 					<li>
-						sport 8: beschrijving
+						Rugby Waterland is een sportclub. Het eerste team speelt momenteel in DeGiro Ereklasse Heren poule B.
 					</li>
 					<li>
-						sport 9: beschrijving
+						Op Elckerlyc kan tennis gespeeld worden. Dit kan zowel solo als duo. 
 					</li>
 					<li>
-						sport 10: beschrijving
+						Kodokan is een verening die aikido, judo en zelfverdedigings lessen aanbiedt op verschillende niveaus, van beginners tot gevorderden.
 					</li>
-				</ul>
+				</ol>
 			</article>
+			<!-- Foto's -->
 			<aside>
-				<a href="https://purmersteijn.eu/"> <img src="img/soccer.jpg" alt="voetbal"> </a>
-				<a href="https://www.earlybird.nl/"> <img src="img/basketbal.jpg" alt="basketbal"> </a>
-				<a href="https://www.mhcp.nl/site/Default.asp"><img src="img/hockey.jpg" alt="hockey"> </a>
-				<a href="https://www.vippurmerend.nl/"><img src="img/volleybal.jpg" alt="volleybal"> </a>
-				<a href="https://avnea.nl/"><img src="img/atletiek.jpg" alt="atletiek"> </a>
-				<a href="https://www.flyingpetrels.nl/"><img src="img/honkbal.jpg" alt="honkbal"> </a>
-				<a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"><img src="img/taekwondo.jpg" alt="taekwondo"> </a>
-				<a href="https://www.rugbyclubwaterland.nl/"><img src="img/rugby.jpg" alt="rugby"> </a>
-				<a href="https://www.elckerlyc.nl/"><img src="img/tennis.jpg" alt="tennis"> </a>
-				<a href="https://svkodokan.nl/"><img src="img/judo.jpg" alt="judo"> </a>
+				<a href="https://purmersteijn.eu/"> <img src="img/soccer.png" alt="balsport" title="voetbal"> </a>
+				<a href="https://www.earlybird.nl/"> <img src="img/basketbal.png" alt="balsport" title="basketbal"> </a>
+				<a href="https://www.mhcp.nl/site/Default.asp"><img src="img/hockey.png" alt="balsport" title="hockey"> </a>
+				<a href="https://www.vippurmerend.nl/"><img src="img/volleybal.png" alt="balsport" title="volleybal"> </a>
+				<a href="https://avnea.nl/"><img src="img/atletiek.png" alt="atletische sport" title="atletiek"> </a>
+				<a href="https://www.flyingpetrels.nl/"><img src="img/honkbal.png" alt="balsport" title="honkbal"> </a>
+				<a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"><img src="img/taekwondo.png" alt="vechtsport" title="taekwondo"> </a>
+				<a href="https://www.rugbyclubwaterland.nl/"><img src="img/rugby.png" alt="balsport" title="rugby"> </a>
+				<a href="https://www.elckerlyc.nl/"><img src="img/tennis.png" alt="balsport" title="tennis"> </a>
+				<a href="https://svkodokan.nl/"><img src="img/judo.png" alt="vechtsport" title="judo"> </a>
 			</aside>
 			<footer>
-				....
+				<a href="#contactcontent"> Contact </a>
 			</footer>
 		</section>
-		<header id="#referalcontent">
-			Taekwon
+		<section id="referalcontent">
+		<header>
+			Taekwondo
 		</header>
+		<!-- Video -->
+		<video muted autoplay>
+		<source src="mp4/Taekwondo_training.mp4" type="video/mp4">			
+		</video>
 		<aside>
-			<p> 
-				video 
-			</p>
+			<a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"> Klik hier voor de link naar de Taekwondo site </a>
 		</aside>
 		<footer>
-			....
+			<a href="#contactcontent"> Contact </a>
 		</footer>
+		</section>
+		<!-- Contact formulier -->
 		<section id="contactcontent">
 		<header>
 			Contact
@@ -173,35 +215,44 @@
 		
 		<fieldset>
 		<legend>		
-			Contact about
+			Vraag of opmerking
 		</legend>
 			<p>
-				First and last name *:
+				'*'= verplicht
+			</p>
+			<p>
+				Voor- en achternaam *:
 			</p>
 		<input 
 			name = "fname" 
 			type = "text"
-			placeholder="Full name"/>
+			placeholder="Voor- en achternaam"/>
 			<p>
-				E-mail address *:
+				E-mail adres *:
 			</p>
 		<input 
 			name ="e-mail"
 			type="email"
-			placeholder="E-mail address"
+			placeholder="E-mail adres"
 			autocomplete="off"/>
 			
 			<p> 
-				Note*:
+				Opmerking*:
 			</p>
 			<textarea 
 				id="note" name="comment" form="usrform">
 			</textarea>
 		
-		<input  type="submit"> &gt; Send email
-		</input>
+		<button type="submit">  Verstuur e-mail
+		</button>
 		</form>
 		</fieldset>
+		<p id="cookie">
+			This website is using cookies. 
+		</p>
+		<footer>
+			&copy; Nick Emons
+		</footer>
 		</section>
 	</body>	
 	</html>
