--- a/Web MarkUp Eindopdracht/index.html
+++ b/Web MarkUp Eindopdracht/index.html
@@ -224,7 +224,7 @@
 				Voor- en achternaam *:
 			</p>
 		<input 
-			name = "fname" 
+			name = "name" 
 			type = "text"
 			placeholder="Voor- en achternaam"/>
 			<p>
@@ -240,7 +240,7 @@
 				Opmerking*:
 			</p>
 			<textarea 
-				id="note" name="comment" form="usrform">
+				id="note" name="message" form="usrform">
 			</textarea>
 		
 		<button type="submit">  Verstuur e-mail
