--- a/Web MarkUp Eindopdracht/index.html
+++ b/Web MarkUp Eindopdracht/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 	<head>
 		<meta charset="utf-8">
 		<meta name="keywords" content="Html5, CSS, Purmerend, Wheermolen, Sport, Taekwondo, Jiu Jitsu">
@@ -248,7 +248,7 @@
 		</form>
 		</fieldset>
 		<p id="cookie">
-			This website is using cookies. 
+			Deze website gebruikt cookies.
 		</p>
 		<footer>
 			&copy; Nick Emons
